--- a/_layouts/sub-layout.html
+++ b/_layouts/sub-layout.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html class="no-js">
+	<title>{{page.title}}</title>
   <head>
  	{% include head.html %} <!-- 위에서 정의한 head.html을 재사용 -->
   </head>
