--- a/_layouts/main-layout.html
+++ b/_layouts/main-layout.html
@@ -1,17 +1,40 @@
 <!doctype html>
 
-<html class="no-js">
+<htm>
 	<title>Pub</title>
   <head>
- 	{% include head.html %} <!-- 위에서 정의한 head.html을 재사용 -->
+{% include main_head.html %} 
   </head>
   <body>
+   <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="/">{{page.title}}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     {{ content }} <!-- 여기에 Post의 내용이 주입된다. -->
-    <div class="page__footer">
-      <footer>
-        {% include footer.html %} <!-- _includes에 정의된 footer -->
-      </footer>
-    </div>
-    {% include scripts.html %} <!-- _includes에 정의된 scripts -->
+        
+      
+    {% include main_footer.html %} 
+    
+    {% include main_scripts.html %}
   </body>
 </html>
