--- a/_layouts/sub-layout.html
+++ b/_layouts/sub-layout.html
@@ -3,15 +3,15 @@
 <html class="no-js">
 	<title>{{page.title}}</title>
   <head>
- 	{% include head.html %} <!-- 위에서 정의한 head.html을 재사용 -->
+ 	{% include sub_head.html %} <!-- 위에서 정의한 head.html을 재사용 -->
   </head>
   <body>
     {{ content }} <!-- 여기에 Post의 내용이 주입된다. -->
     <div class="page__footer">
       <footer>
-        {% include footer.html %} <!-- _includes에 정의된 footer -->
+        {% include sub_footer.html %} <!-- _includes에 정의된 footer -->
       </footer>
     </div>
-    {% include scripts.html %} <!-- _includes에 정의된 scripts -->
+    {% include sub_scripts.html %} <!-- _includes에 정의된 scripts -->
   </body>
 </html>
