--- a/_layouts/sub-layout.html
+++ b/_layouts/sub-layout.html
@@ -1,14 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
+<html class="loading" lang="en">
 
-<html class="no-js">
-	<title>{{page.title}}</title>
-  <head>
- 	{% include sub_head.html %} <!-- 위에서 정의한 head.html을 재사용 -->
-  </head>
-  <body>
-  
-    {{ content }} <!-- 여기에 Post의 내용이 주입된다. -->
-    
-    {% include sub_scripts.html %} <!-- _includes에 정의된 scripts -->
-  </body>
+<head>
+<title>{{page.title}}</title> 
+{% include sub_head.html %}
+<!-- 위에서 정의한 head.html을 재사용 -->
+</head>
+<body>
+
+	<div class="pub-sub-navbar-fixed">
+		<div class="nav-wrapper">
+			<nav class="navbar navbar-expand-lg">
+				<a class="navbar-brand" href="/">{{page.title}}</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse"
+					data-target="#navbarResponsive" aria-controls="navbarResponsive"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse">
+
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item active"><a class="nav-link" href="/">Home
+								<span class="sr-only">(current)</span>
+						</a></li>
+						<li class="nav-item active"><a class="nav-link" href="/">Home
+								<span class="sr-only">(current)</span>
+						</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+
+	</div>
+	<div class="vertical-navigations">
+		<ul class="side-nav fixed">
+			<li>메뉴 1</li>
+			<li>메뉴 2</li>
+			<li>메뉴 3</li>
+			<li>메뉴 4</li>
+			<li>메뉴 5</li>
+		</ul>
+	</div>
+	<div class="main-content-wrapper">
+
+		<div class="main-header">
+			<div class="page-title">
+				<h2>Dashboard</h2>
+			</div>
+		</div>
+		<div>
+			<!-- content-->
+			<div class="main-content">
+				{{ content }}
+			</div>
+		</div>
+	</div>
+	<!-- SCRIPTS-->
+	{% include sub_scripts.html %}
+	<!-- _includes에 정의된 scripts -->
+</body>
 </html>
