--- a/_layouts/sub-layout.html
+++ b/_layouts/sub-layout.html
@@ -38,7 +38,7 @@
 		</ul>
 	</div>
 	<div class="main-content-wrapper">
-
+		<!-- <div style="width:100%;overflow-x:auto;overflow-y:hidden;">  -->
 		<div class="main-header">
 			<div class="page-title">
 				<h2>Dashboard</h2>
@@ -51,6 +51,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- </div>-->
 	<!-- SCRIPTS-->
 	{% include sub_scripts.html %}
 	<!-- _includes에 정의된 scripts -->
