--- a/demo/theme/default/pub.grid.css
+++ b/demo/theme/default/pub.grid.css
@@ -181,15 +181,11 @@
 	padding:1px 2px 1px 2px;
 }
 
-.pubGrid-body .pub-body-tr > td .pub-content-ellipsis {
+.pubGrid-body .pub-body-tr > td .pub-content-ellipsis ,.pubGrid-body .pub-body-tr > td .pub-content-ellipsis >*{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 	padding: 0px;margin:0px;
-}
-
-.pubGrid-body .pub-body-tr > td .pub-content-ellipsis >div, .pubGrid-body .pub-body-tr > td .pub-content-ellipsis>span{
-    line-height: 1.3;
 }
 
 .pubGrid-body .pub-body-td.col-active .pub-content-cell{
@@ -228,9 +224,9 @@
 }
 /* --/header end */
 
-.pubGrid-body .al{text-align:left;}
-.pubGrid-body .ar{text-align:right;}
-.pubGrid-body .ac{text-align:center;}
+.pubGrid-body .alignleft{text-align:left;}
+.pubGrid-body .alignright{text-align:right;}
+.pubGrid-body .aligncenter{text-align:center;}
 
 
 .pubGrid-page-navigation>ul {
