--- a/_includes/sub_demo_head.html
+++ b/_includes/sub_demo_head.html
@@ -8,6 +8,7 @@
 
 <script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/jquery-ui.min.js"></script>
+<script src="/assets/js/demo.js"></script>
 <script src="/assets/js/codemirror/codemirror.js"></script>
 <script src="/assets/js/codemirror/javascript.js"></script>
 
