--- a/_layouts/main-layout.html
+++ b/_layouts/main-layout.html
@@ -43,3 +43,13 @@
     {% include main_scripts.html %}
 </body>
 </html>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132678069-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-132678069-2');
+</script>
