--- a/_includes/main_footer.html
+++ b/_includes/main_footer.html
@@ -1,5 +1,5 @@
 <footer class="py-2 pub-bar-bg">
     <div class="container">
-        <p class="m-0 text-center">Copyright Pub 2017</p>
+        <p class="m-0 text-center">MIT license. Pub 2020</p>
     </div>
 </footer>
